# 3d-scanner

./: .gitignore  README.md  pyproject.toml
3d_scanner/: calibration_data.py  data_conversion.py  main.py
arduino/3d_scanner/: 3d_scanner.ino
arduino/visualization/: visualization.ino
data/: calibration_data.xlsx  calibration_test.xlsx  test.txt
kicad/: 3d_scanner.kicad_pro  3d_scanner.kicad_sch
three_dim_scanner/: calibration_data.py  data_analysis.py  main.py
