[tool.poetry]
name = "3d-scanner"
version = "0.0.1"
description = "A 3D Scanner run by an Arduino."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
