[tool.poetry]
name = "three_dim_scanner"
version = "0.0.1"
description = "A 3D Scanner run by an Arduino."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial-asyncio = "^0.6"
pyserial = "^3.5"
matplotlib = "^3.10.6"
numpy = "^2.3.3"
pandas = "^2.3.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
